fix audio tours full
