# openapi.yml
@@ -209,39 +209,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AudioTourDetails'
+                $ref: '#/components/schemas/AudioTourDto'
         '404':
           description: Учреждение или экскурсия не найдены.
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/MyError'
-    patch:
-      tags:
-        - Audio Tours
-      summary: Обновить аудиоэкскурсию
-      description: Администратор учреждения обновляет данные своей экскурсии.
-      operationId: updateNestedAudioTour
-      security:
-        - BearerAuth: [tours.write]
-      parameters:
-        - $ref: '#/components/parameters/InstitutionId'
-        - $ref: '#/components/parameters/TourId'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AudioTourUpdate'
-      responses:
-        '200':
-          description: Экскурсия успешно обновлена.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AudioTourDto'
-        '403':
-          description: Доступ запрещен.
           content:
             application/problem+json:
               schema:
@@ -493,7 +463,7 @@ components:
         items:
           type: array
           items:
-            $ref: '#/components/schemas/AudioTourSummary'
+            $ref: '#/components/schemas/AudioTourDto'
         total_elements:
           type: integer
           format: int64
