# src/main/java/com/organizer/todo/service/DtoMapper.java
@@ -61,5 +61,17 @@ public class DtoMapper {
 
         return paginatedInstitutions;
     }
+
+    public PaginatedAudioTours toPaginatedAudioTours(Page<com.audiotour.dto.AudioTourDto> list) {
+        PaginatedAudioTours paginatedAudioTours = new PaginatedAudioTours();
+
+        paginatedAudioTours.setItems(list.getContent());
+        paginatedAudioTours.setPage(list.getPageable().getPageNumber());
+        paginatedAudioTours.setTotalElements(list.getTotalElements());
+        paginatedAudioTours.setSize(list.getPageable().getPageSize());
+        paginatedAudioTours.setTotalPages(list.getTotalPages());
+
+        return paginatedAudioTours;
+    }
 }
 
